fix doughnut on mobile v2

--- a/app/styles/charts.css
+++ b/app/styles/charts.css
@@ -27,6 +27,6 @@
 
 @media(max-width:560px) {
   .doughnut {
-    max-width: 280px;
+    max-width: 250px;
   }
 }
